Revision history for ELF-Extract-Sections

1.001001 2015-08-14T06:33:16Z 4620064

1.001000 2015-08-14T06:32:18Z 4d78d05
 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - runtime: +1
 - test: +2

 [Internals]
 - Parameter handling delegated to MooseX::Params::Validate
 - TODO: guard against spurious bless() causing problems, re rt#106192

 [Tests]
 - Probing for version data to make a better verison check

1.000000 2015-07-30T16:49:16Z 1c37bc4
 [!Major]
 - This release includes some respectably significant changes.

 [01 Install Side Tooling change]
 - Previously, Module::Build was used as the installer.
 - This is now ExtUtils::MakeMaker
 - See https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [02 Version Scheme Change]
 - Previously used a lengthy 0.{'0' x '8'} scheme.
 - Now uses a 0.{'0' x 6} scheme for clarity.
 - The 1.x on the box is due in part to this change.
 - See: https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [03 Internals Overhaul]
 - MooseX::Declare is too pesky to use with perltidy (even sweetened)
 - So everything has been entirely rewritten in pure Moose with simple type checks.
 - Class::Load has been replaced with Module::Runtime

 [Dependencies::Stats]
 - Dependencies changed since 0.03000101, see misc/*.deps* for details
 - build: -1
 - configure: +3 -1 (recommends: +1)
 - develop: +55 -4 (recommends: +1 -1, suggests: +1 ↑1)
 - runtime: +3 -2 (recommends: +1)
 - test: +4 ↑1 ↓1 -2 (recommends: +4)

0.03000101 2013-05-07T08:56:28Z
 [!Major Changes]
 - Path::Class replaced with Path::Tiny
 - Tests/Utils use Path::Iterator::Rule instead of File::Find::Rule
 - Packaging toolchain updated
 - Carp warnings now only Log4Perl warnings so you can hide them if needed.

 [Dependencies::Stats]
 - Dependencies changed since 0.02071411, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +8 (recommends: ↑1, suggests: ↑1)
 - runtime: +3 -1
 - test: +2 ↑1 -3
