@@ -1,6 +1,30 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.001001
+ [Added / configure requires]
+ - Capture::Tiny
+ - File::Which
+ - Term::ANSIColor
+
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::DynamicPrereqs
+ - English
+ - Software::License::Perl_5
+
+ [Changed / configure requires]
+ - perl 5.010 → 5.006
+
+ [Changed / develop requires]
+ - Test::More 0.88 → 0.96
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.025001 → 2.025002
+
+ [Removed / configure requires]
+ - Devel::CheckBin
+
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::CheckBin
 
 1.001000 2015-08-14T06:32:18Z
  [Added / runtime requires]
